home page structure

--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-
-  <div id="home">
-    <div id="home-overlay"></div>
-  </div>
-
-
-
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Photos</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="shader"></div>
+    <div class="centered">
+      <h1>Landscapes</h1>
+      <h2>Welcome to the site</h2>
+      <h2>- No job is too small -</h2>
+      <h2>- 100% service guarantee -</h2>
+      <!-- <button class="facebook"><i class="fa fa-facebook-square" aria-hidden="true"></i> Sign in with Facebook</button>
+      <button class="twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i> Sign in with Twitter</button>  -->
+    </div>
+  </main>
+  <footer>
+    <p id="footer-txt">This is the copyright</p>
+  </footer>
 
 </body>
 </html>
