landing page structure

--- a/index.html
+++ b/index.html
@@ -6,33 +6,40 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Photos</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <div class="shader"></div>
     <div class="centered">
-      <h1>Landscapes</h1>
-      <h2>Welcome to the site</h2>
-      <h2>- No job is too small -</h2>
-      <h2>- 100% service guarantee -</h2>
+      <h1 id="heading">Landscapes</h1>
+      <h2 class="intro-txt"><span>Welcome</span> to our site</h2>
+      <h2 class="intro-txt">- 100% service guaranteed -</h2>
+      <h2 class="intro-txt">Professional Design & Build Company</h2>
       <!-- <button class="facebook"><i class="fa fa-facebook-square" aria-hidden="true"></i> Sign in with Facebook</button>
       <button class="twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i> Sign in with Twitter</button>  -->
     </div>
   </main>
   <footer>
-    <p id="footer-txt">This is the copyright</p>
+    <img src="images/certificate-logo.png" id="certificate-logo" />
+    <div>
+      <p id="phone-no">01604 - 406549</p>
+      <p id="email-enquiry">enquiries@landscapes.co.uk</p>
+    </div>
+    <p id="footer-txt">DX2> &copy 2017</p>
   </footer>
+
 
 </body>
 </html>
