--- a/about.html
+++ b/about.html
@@ -9,12 +9,22 @@
   <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div id="about-banner">
+      <img src="images/about-banner.jpg" alt="About banner" />
+    </div>
 
-
-
-
-
-
+  </main>
 
 
 
