about page wrapper & layout added

--- a/about.html
+++ b/about.html
@@ -23,6 +23,32 @@
     <div id="about-banner">
       <img src="images/about-banner.jpg" alt="About banner" />
     </div>
+    <div class="wrapper">
+      <div id="about-intro">
+        <h2>Locally Owned and Family Operated</h2><br />
+        <p>Lorizzle ipsum dolizzle sizzle amizzle, bow wow wow adipiscing ass. Nullam nizzle velizzle, fo shizzle mah nizzle fo rizzle,
+          mah home g-dizzle volutpat, suscipit quizzle, fo shizzle vizzle, dang. Pellentesque doggy tortizzle. Fo shizzle mah nizzle fo
+          rizzle, mah home g-dizzle erizzle. Fo shizzle at dolor go to hizzle things tempizzle my shizz. Maurizzle fo nibh bling bling
+          turpizzle. Vestibulum in tortor. Pellentesque break yo neck, yall rhoncus nisi. In yo mamma get down get down check out this
+          dictumst. In yo mamma get down get down check out this dictumst. Donec dapibizzle. Curabitur check it out fizzle, mammasay
+          mammasa mamma oo sa i saw beyonces tizzles and my pizzle went crizzle, sizzle ac, eleifend vitae, nunc. Daahng dawg suscipizzle.
+          Fo shizzle sempizzle boom shackalack sizzle check out this.</p>
+      </div><br  />
+      <div id="offer-clients">
+        <h2>We offer our clients...</h2><br />
+        <ul>
+          <li>1 - offer</li>
+          <li>2 - offer</li>
+          <li>3 - offer</li>
+          <li>4 - offer</li>
+          <li>5 - offer</li>
+        </ul>
+      </div>
+      <img src="images/example-family.jpg" />
+
+    </div>
+
+
 
   </main>
 
