about page lorem contents added

--- a/about.html
+++ b/about.html
@@ -43,7 +43,17 @@
           <li>4 - offer</li>
           <li>5 - offer</li>
         </ul>
+      </div><br />
+      <div id="thank-customers">
+        <h2>Thanks To Our Customers</h2><br />
+        <p>Daahng dawg laoreet uhuh ... yih! break yo neck, yall get down get down. Brizzle quizzle arcu. Maecenizzle shiz,
+          ipsizzle malesuada malesuada scelerisque, nulla shiznit euismizzle go to hizzle, izzle luctizzle metizzle nulla et yippiyo.
+          Vivamizzle ullamcorper, izzle i saw beyonces tizzles and my pizzle went crizzle varius ass, nibh owned gangster check it out,
+          izzle you son of a bizzle leo elit in dolor. Check it out tellivizzle, orci vel volutpat consectetuer, sem own yo' shit nisi,
+          izzle bibendum enim ass ut dang. Nullizzle a velit fo shizzle mah nizzle fo rizzle, mah home g-dizzle break it down tellivizzle
+          viverra.</p><br />
       </div>
+
       <img src="images/example-family.jpg" />
 
     </div>
