about page css updates

--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
     </div>
     <div class="wrapper">
       <div id="about-intro">
-        <h2>Locally Owned and Family Operated</h2><br />
-        <p>Lorizzle ipsum dolizzle sizzle amizzle, bow wow wow adipiscing ass. Nullam nizzle velizzle, fo shizzle mah nizzle fo rizzle,
+        <p class="sub-headings">Locally Owned and Family Operated</p><br />
+        <p id="family-operated">Lorizzle ipsum dolizzle sizzle amizzle, bow wow wow adipiscing ass. Nullam nizzle velizzle, fo shizzle mah nizzle fo rizzle,
           mah home g-dizzle volutpat, suscipit quizzle, fo shizzle vizzle, dang. Pellentesque doggy tortizzle. Fo shizzle mah nizzle fo
           rizzle, mah home g-dizzle erizzle. Fo shizzle at dolor go to hizzle things tempizzle my shizz. Maurizzle fo nibh bling bling
           turpizzle. Vestibulum in tortor. Pellentesque break yo neck, yall rhoncus nisi. In yo mamma get down get down check out this
@@ -34,18 +34,20 @@
           mammasa mamma oo sa i saw beyonces tizzles and my pizzle went crizzle, sizzle ac, eleifend vitae, nunc. Daahng dawg suscipizzle.
           Fo shizzle sempizzle boom shackalack sizzle check out this.</p>
       </div><br  />
+      <hr />      
       <div id="offer-clients">
-        <h2>We offer our clients...</h2><br />
+        <p class="sub-headings">We offer our clients...</p><br />
         <ul>
-          <li>1 - offer</li>
-          <li>2 - offer</li>
-          <li>3 - offer</li>
-          <li>4 - offer</li>
-          <li>5 - offer</li>
+          <li>1 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+          <li>2 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+          <li>3 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+          <li>4 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+          <li>5 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
         </ul>
       </div><br />
+      <hr />
       <div id="thank-customers">
-        <h2>Thanks To Our Customers</h2><br />
+        <p class="sub-headings">Thanks To Our Customers</p><br />
         <p>Daahng dawg laoreet uhuh ... yih! break yo neck, yall get down get down. Brizzle quizzle arcu. Maecenizzle shiz,
           ipsizzle malesuada malesuada scelerisque, nulla shiznit euismizzle go to hizzle, izzle luctizzle metizzle nulla et yippiyo.
           Vivamizzle ullamcorper, izzle i saw beyonces tizzles and my pizzle went crizzle varius ass, nibh owned gangster check it out,
