about page layout stages

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
           mammasa mamma oo sa i saw beyonces tizzles and my pizzle went crizzle, sizzle ac, eleifend vitae, nunc. Daahng dawg suscipizzle.
           Fo shizzle sempizzle boom shackalack sizzle check out this.</p>
       </div><br  />
-      <hr />      
+      <hr />
       <div id="offer-clients">
         <p class="sub-headings">We offer our clients...</p><br />
         <ul>
@@ -48,7 +48,7 @@
       <hr />
       <div id="thank-customers">
         <p class="sub-headings">Thanks To Our Customers</p><br />
-        <p>Daahng dawg laoreet uhuh ... yih! break yo neck, yall get down get down. Brizzle quizzle arcu. Maecenizzle shiz,
+        <p id="thank-customers">Daahng dawg laoreet uhuh ... yih! break yo neck, yall get down get down. Brizzle quizzle arcu. Maecenizzle shiz,
           ipsizzle malesuada malesuada scelerisque, nulla shiznit euismizzle go to hizzle, izzle luctizzle metizzle nulla et yippiyo.
           Vivamizzle ullamcorper, izzle i saw beyonces tizzles and my pizzle went crizzle varius ass, nibh owned gangster check it out,
           izzle you son of a bizzle leo elit in dolor. Check it out tellivizzle, orci vel volutpat consectetuer, sem own yo' shit nisi,
@@ -56,7 +56,7 @@
           viverra.</p><br />
       </div>
 
-      <img src="images/example-family.jpg" />
+      <img src="images/family-business-pic.jpg" id="family-pic" />
 
     </div>
 
