about page - banner font added, nav menu tidied up

--- a/about.html
+++ b/about.html
@@ -22,52 +22,47 @@
   <main>
     <div id="about-banner">
       <img src="images/about-banner.jpg" alt="About banner" />
+      <p class="page-headings">About</p>
     </div>
-    <div class="wrapper">
-      <div id="about-intro">
-        <p class="sub-headings">Locally Owned and Family Operated</p><br />
-        <p id="family-operated">Lorizzle ipsum dolizzle sizzle amizzle, bow wow wow adipiscing ass. Nullam nizzle velizzle, fo shizzle mah nizzle fo rizzle,
-          mah home g-dizzle volutpat, suscipit quizzle, fo shizzle vizzle, dang. Pellentesque doggy tortizzle. Fo shizzle mah nizzle fo
-          rizzle, mah home g-dizzle erizzle. Fo shizzle at dolor go to hizzle things tempizzle my shizz. Maurizzle fo nibh bling bling
-          turpizzle. Vestibulum in tortor. Pellentesque break yo neck, yall rhoncus nisi. In yo mamma get down get down check out this
-          dictumst. In yo mamma get down get down check out this dictumst. Donec dapibizzle. Curabitur check it out fizzle, mammasay
-          mammasa mamma oo sa i saw beyonces tizzles and my pizzle went crizzle, sizzle ac, eleifend vitae, nunc. Daahng dawg suscipizzle.
-          Fo shizzle sempizzle boom shackalack sizzle check out this.</p>
-      </div><br  />
-      <hr />
-      <div id="offer-clients">
-        <p class="sub-headings">We offer our clients...</p><br />
-        <ul>
-          <li>1 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-          <li>2 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-          <li>3 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-          <li>4 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-          <li>5 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-        </ul>
-      </div><br />
-      <hr />
-      <div id="thank-customers">
-        <p class="sub-headings">Thanks To Our Customers</p><br />
-        <p id="thank-customers">Daahng dawg laoreet uhuh ... yih! break yo neck, yall get down get down. Brizzle quizzle arcu. Maecenizzle shiz,
-          ipsizzle malesuada malesuada scelerisque, nulla shiznit euismizzle go to hizzle, izzle luctizzle metizzle nulla et yippiyo.
-          Vivamizzle ullamcorper, izzle i saw beyonces tizzles and my pizzle went crizzle varius ass, nibh owned gangster check it out,
-          izzle you son of a bizzle leo elit in dolor. Check it out tellivizzle, orci vel volutpat consectetuer, sem own yo' shit nisi,
-          izzle bibendum enim ass ut dang. Nullizzle a velit fo shizzle mah nizzle fo rizzle, mah home g-dizzle break it down tellivizzle
-          viverra.</p><br />
-      </div>
-
-      <img src="images/family-business-pic.jpg" id="family-pic" />
-
-    </div>
-
-
-
+        <div class="wrapper">
+          <div id="about-intro">
+            <p class="sub-headings">Locally Owned and Family Operated</p><br />
+            <p id="family-operated">Lorizzle ipsum dolizzle sizzle amizzle, bow wow wow adipiscing ass. Nullam nizzle velizzle, fo shizzle mah nizzle fo rizzle,
+              mah home g-dizzle volutpat, suscipit quizzle, fo shizzle vizzle, dang. Pellentesque doggy tortizzle. Fo shizzle mah nizzle fo
+              rizzle, mah home g-dizzle erizzle. Fo shizzle at dolor go to hizzle things tempizzle my shizz. Maurizzle fo nibh bling bling
+              turpizzle. Vestibulum in tortor. Pellentesque break yo neck, yall rhoncus nisi. In yo mamma get down get down check out this
+              dictumst. In yo mamma get down get down check out this dictumst. Donec dapibizzle. Curabitur check it out fizzle, mammasay
+              mammasa mamma oo sa i saw beyonces tizzles and my pizzle went crizzle, sizzle ac, eleifend vitae, nunc. Daahng dawg suscipizzle.
+              Fo shizzle sempizzle boom shackalack sizzle check out this.</p>
+          </div><br  />
+          <hr />
+          <div id="offer-clients">
+            <p class="sub-headings">We offer our clients...</p><br />
+            <ul>
+              <li>1 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+              <li>2 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+              <li>3 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+              <li>4 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+              <li>5 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
+            </ul>
+          </div><br />
+          <hr />
+          <div id="thankyou">
+              <p class="sub-headings">Thanks To Our Customers</p><br />
+                <p id="thank-customers">Daahng dawg laoreet uhuh ... yih! break yo neck, yall get down get down. Brizzle quizzle arcu. Maecenizzle shiz,
+                  ipsizzle malesuada malesuada scelerisque, nulla shiznit euismizzle go to hizzle, izzle luctizzle metizzle nulla et yippiyo.
+                  Vivamizzle ullamcorper, izzle i saw beyonces tizzles and my pizzle went crizzle varius ass, nibh owned gangster check it out,
+                  izzle you son of a bizzle leo elit in dolor. Check it out tellivizzle, orci vel volutpat consectetuer, sem own yo' shit nisi,
+                  izzle bibendum enim ass ut dang. Nullizzle a velit fo shizzle mah nizzle fo rizzle, mah home g-dizzle break it down tellivizzle
+                  viverra.</p>
+                  <img src="images/family-business-pic.jpg" id="family-pic" />
+          </div>
+        </div>
   </main>
 
-
-
-
-
+    <footer>
+      <img src="images/grass-banner.png" alt="Grass Banner"/>
+    </footer>
 
 
 </body>
