about nav bar done, just logo to do

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <hr />
           <div id="offer-clients">
             <p class="sub-headings">We offer our clients...</p><br />
-            <ul>
+            <ul id="offer-list">
               <li>1 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
               <li>2 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
               <li>3 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
