--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
 <body>
   <header>
     <nav>
+      <img src="images/leaf-logo.png" id="leaf-logo" />
+      <span>A&H Landscapes</span>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -61,7 +63,7 @@
   </main>
 
     <footer>
-      <img src="images/grass-banner.png" alt="Grass Banner"/>
+      <img src="images/grass-banner.jpg" alt="Grass Banner"/>
     </footer>
 
 
