gallery page banner & css structure added

--- a/gallery.html
+++ b/gallery.html
@@ -22,8 +22,8 @@
     </nav>
   </header>
   <main>
-    <div id="about-banner">
-      <img src="images/about-banner.jpg" alt="About banner" />
+    <div id="gallery-banner">
+      <img src="images/gallery-banner.jpg" alt="Gallery banner" />
       <p class="page-headings">Gallery</p>
     </div>
         <div class="wrapper">
