contact page - layout structure

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,34 @@
     </div>
         <div class="wrapper">
 
+          <div class="contact-info">
+            <p class="sub-headings">Contact Us</p><br />
+            <p class="contact-details">1 Cottage Gardens</p>
+            <p class="contact-details">Northampton</p>
+            <p class="contact-details">NN3 9YW</p><br />
+            <p class="contact-details">Phone: 01604-406549</p>
+            <p class="contact-details">Email: enquiries@ahlandscapes.com</p>
+          </div><br />
+
+          <p class="sub-headings">Get Additional Information:</p>
+
+          <div class="input-personal">
+            <p class="sub-headings">Your Name:</p>
+            <input type="text" />
+            <p class="sub-headings">Your Email:</p>
+            <input type="text" />
+            <p class="sub-headings">Your Phone:</p>
+            <input type="number" />
+          </div>
+
+          <div class="input-questions">
+            <p class="sub-headings">Questions:</p>
+            <textarea rows="4" cols="50">
+              Random questions entered in here
+            </textarea>
+            <button>Send</button>
+          </div>
+
         </div>
   </main>
 
