contact page css tidying

--- a/contact.html
+++ b/contact.html
@@ -37,32 +37,33 @@
             <p class="contact-details">Email: enquiries@ahlandscapes.com</p>
           </div><br />
 
-          <p class="sub-headings">Get Additional Information:</p>
+          <p id="additional-heading">Get Additional Information:</p>
 
-          <div class="input-personal">
-            <p class="sub-headings">Your Name:</p>
-            <input type="text" />
-            <p class="sub-headings">Your Email:</p>
-            <input type="text" />
-            <p class="sub-headings">Your Phone:</p>
-            <input type="number" />
-          </div>
+          <div class="user-contact-form">
+              <div class="input-personal">
+                <p class="sub-headings">Your Name:</p>
+                <input type="text" />
+                <p class="sub-headings">Your Email:</p>
+                <input type="text" />
+                <p class="sub-headings">Your Phone:</p>
+                <input type="number" />
+              </div>
 
-          <div class="input-questions">
-            <p class="sub-headings">Questions:</p>
-            <textarea rows="4" cols="50">
-              Random questions entered in here
-            </textarea>
-            <button>Send</button>
-          </div>
-
+              <div class="input-questions">
+                <p class="sub-headings">Questions:</p>
+                <textarea rows="12" cols="80">
+                  Random questions entered in here
+                </textarea>
+                  <div>
+                    <button>Send</button>
+                  </div>
+              </div>
+          </div>    
         </div>
   </main>
 
     <footer>
       <img src="images/grass-banner.jpg" alt="Grass Banner"/>
     </footer>
-
-
 </body>
 </html>
