contact page - css structure done

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
           <div class="user-contact-form">
               <div class="input-personal">
                 <p class="sub-headings">Your Name:</p>
-                <input type="text" />
+                <input type="text" placeholder="Full Name" />
                 <p class="sub-headings">Your Email:</p>
                 <input type="text" />
                 <p class="sub-headings">Your Phone:</p>
@@ -58,7 +58,7 @@
                     <button>Send</button>
                   </div>
               </div>
-          </div>    
+          </div>
         </div>
   </main>
 
