home page nav bar re-designed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
   <header>
     <nav>
+      <img src="images/leaf-logo.png" id="leaf-logo" />
+      <span>A&H Landscapes</span>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -22,8 +24,8 @@
   <main>
     <div class="shader"></div>
     <div class="centered">
-      <h1 id="heading">Landscapes</h1>
-      <h2 class="intro-txt"><span>Welcome</span> to our site</h2>
+      <h1 id="heading">A&H Landscapes</h1>
+      <h2 class="intro-txt">Welcome to our site</h2>
       <h2 class="intro-txt">- 100% service guaranteed -</h2>
       <h2 class="intro-txt">Professional Design & Build Company</h2>
       <!-- <button class="facebook"><i class="fa fa-facebook-square" aria-hidden="true"></i> Sign in with Facebook</button>
