home page - css tidy up

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </main>
   <footer>
     <img src="images/certificate-logo.png" id="certificate-logo" />
-    <div>
+    <div id="contact">
       <p id="phone-no">01604 - 406549</p>
       <p id="email-enquiry">enquiries@landscapes.co.uk</p>
     </div>
