--- a/about.html
+++ b/about.html
@@ -63,6 +63,14 @@
   </main>
 
     <footer>
+      <div class="footer-info">
+        <img src="images/leaf-image.png" />
+        <p id="footer-company">A&H Landscapes</p><br />
+        <p>01604-406549</p>
+        <p>enquiries@ahlandscapes.com</p><br />
+        <p>Design by DX2> &copy 2017</p>
+      </div>
+
       <img src="images/grass-banner.jpg" alt="Grass Banner"/>
     </footer>
 
