home page - replace logo, fonts changed

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
   <header>
     <nav>
-      <img src="images/leaf-logo.png" id="leaf-logo" />
+      <img src="images/leaf-image.png" id="leaf-image" width="100" height="70"  />
       <span>A&H Landscapes</span>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -38,7 +40,7 @@
       <p id="phone-no">01604 - 406549</p>
       <p id="email-enquiry">enquiries@landscapes.co.uk</p>
     </div>
-    <p id="footer-txt">DX2> &copy 2017</p>
+    <p id="footer-txt">Design by DX2> &copy 2017</p>
   </footer>
 
 
