--- a/about.html
+++ b/about.html
@@ -66,9 +66,9 @@
       <div class="footer-info">
         <img src="images/leaf-image.png" />
         <p id="footer-company">A&H Landscapes</p><br />
-        <p>01604-406549</p>
-        <p>enquiries@ahlandscapes.com</p><br />
-        <p>Design by DX2> &copy 2017</p>
+        <p class="contact-details">01604-406549</p>
+        <p class="contact-details" id="email-info">enquiries@ahlandscapes.com</p><br />
+        <p id="design-info">Design by DX2> &copy 2017</p>
       </div>
 
       <img src="images/grass-banner.jpg" alt="Grass Banner"/>
