logo updates on content pages

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav>
-      <img src="images/leaf-logo.png" id="leaf-logo" />
+      <img src="images/white-leaf-image.png" width="120" height="75" id="leaf-logo" />
       <span>A&H Landscapes</span>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -36,6 +36,8 @@
             <p class="contact-details">Phone: 01604-406549</p>
             <p class="contact-details">Email: enquiries@ahlandscapes.com</p>
           </div><br />
+
+          <hr />
 
           <p id="additional-heading">Get Additional Information:</p>
 
