--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav>
       <img src="images/leaf-image.png" id="leaf-image" width="100" height="70"  />
-      <span>A&H Landscapes</span>
+      <span><a href="index.html">A&H Landscapes</a></span>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -30,8 +30,6 @@
       <h2 class="intro-txt">Welcome to our site</h2>
       <h2 class="intro-txt">- 100% service guaranteed -</h2>
       <h2 class="intro-txt">Professional Design & Build Company</h2>
-      <!-- <button class="facebook"><i class="fa fa-facebook-square" aria-hidden="true"></i> Sign in with Facebook</button>
-      <button class="twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i> Sign in with Twitter</button>  -->
     </div>
   </main>
   <footer>
@@ -42,7 +40,5 @@
     </div>
     <p id="footer-txt">Design by DX2> &copy 2017</p>
   </footer>
-
-
 </body>
 </html>
