slider plugin added, HTML & CSS & images

--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/gallery.css">
+  <link rel="stylesheet" href="css/slider.css">
 </head>
 <body>
   <header>
@@ -27,7 +28,26 @@
       <p class="page-headings">Gallery</p>
     </div>
         <div class="wrapper">
-
+          <section id="gallery-con">
+            <section id="gallery-main">
+              <img src="./images/landscape1.jpg" />
+            </section>
+            <section id="gallery-hidden">
+              <img src="./images/landscape2.jpg" />
+              <img src="./images/landscape3.jpg" />
+              <img src="./images/landscape3.jpg" />
+              <img src="./images/landscape4.jpg" />
+            </section>
+            <section id="thumbnails">
+              <div id="playtoggle" class="ui-button"><div class="icon icon-pause"></div></div>
+              <div id="left-arrow" class="ui-button"><div class="icon icon-arrow-left"></div></div>
+              <div id="thumbcon">
+              </div>
+              <div id="right-arrow" class="ui-button"><div class="icon icon-arrow-right"></div></div>
+            </section>
+            <section id="progressbar">
+            </section>
+          </section>
         </div>
   </main>
 
