slider plugin structure built

--- a/gallery.html
+++ b/gallery.html
@@ -30,13 +30,13 @@
         <div class="wrapper">
           <section id="gallery-con">
             <section id="gallery-main">
-              <img src="./images/landscape1.jpg" />
+              <img src="images/landscape1.jpg" />
             </section>
             <section id="gallery-hidden">
-              <img src="./images/landscape2.jpg" />
-              <img src="./images/landscape3.jpg" />
-              <img src="./images/landscape3.jpg" />
-              <img src="./images/landscape4.jpg" />
+              <img src="images/landscape2.jpg" />
+              <img src="images/landscape3.jpg" />
+              <img src="images/landscape3.jpg" />
+              <img src="images/landscape4.jpg" />
             </section>
             <section id="thumbnails">
               <div id="playtoggle" class="ui-button"><div class="icon icon-pause"></div></div>
@@ -64,5 +64,8 @@
   </footer>
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/gallery.js" ></script>
+<script src="js/index.js"></script>
 </body>
 </html>
