--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,7 @@
       <p class="page-headings">Gallery</p>
     </div>
         <div class="wrapper">
+          <p class="sub-headings" id="example">Examples of some of our work: </p>
           <section id="gallery-con">
             <section id="gallery-main">
               <img src="images/landscape1.jpg" />
@@ -35,8 +36,10 @@
             <section id="gallery-hidden">
               <img src="images/landscape2.jpg" />
               <img src="images/landscape3.jpg" />
-              <img src="images/landscape3.jpg" />
               <img src="images/landscape4.jpg" />
+              <img src="images/landscape5.jpg" />
+              <img src="images/landscape6.jpg" />
+              <img src="images/landscape7.jpg" />
             </section>
             <section id="thumbnails">
               <div id="playtoggle" class="ui-button"><div class="icon icon-pause"></div></div>
