--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,8 @@
             <p class="contact-details">NN3 9YW</p><br />
             <p class="contact-details">Phone: 01604-406549</p>
             <p class="contact-details">Email: enquiries@ahlandscapes.com</p>
+            <img src="images/fountain1.jpg" id="fountain-image"/>
+            <img src="images/fountain2.jpg" id="fountain-image2" />
           </div><br />
 
           <hr />
@@ -53,7 +55,7 @@
 
               <div class="input-questions">
                 <p class="sub-headings">Questions:</p>
-                <textarea rows="12" cols="80">
+                <textarea rows="12" cols="70">
                   Random questions entered in here
                 </textarea>
                   <div>
