--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
     </div>
     <p id="footer-txt">Design by DX2> &copy 2017</p>
   </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/index.js"></script>  
 </body>
 </html>
