refactor code & replace images

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav>
-      <img src="images/white-leaf-image.png" width="120" height="75" id="leaf-logo" />
+      <img src="images/leaf-image.png" width="120" height="75" id="leaf-logo" />
       <span>A&H Landscapes</span>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -77,3 +77,15 @@
 
 </body>
 </html>
+
+
+<!-- <div class="contact-info">
+  <p class="sub-headings">Contact Us</p><br />
+  <p class="contact-details">1 Cottage Gardens</p>
+  <p class="contact-details">Northampton</p>
+  <p class="contact-details">NN3 9YW</p><br />
+  <p class="contact-details">Phone: 01604-406549</p>
+  <p class="contact-details">Email: enquiries@ahlandscapes.com</p>
+  <img src="images/fountain1.jpg" id="fountain-image"/>
+  <img src="images/fountain2.jpg" id="fountain-image2" />
+</div><br /> -->
