--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav>
-      <img src="images/white-leaf-image.png" width="120" height="75" id="leaf-logo" />
+      <img src="images/leaf-image.png" width="120" height="75" id="leaf-logo" />
       <span>A&H Landscapes</span>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -28,16 +28,18 @@
     </div>
         <div class="wrapper">
 
-          <div class="contact-info">
-            <p class="sub-headings">Contact Us</p><br />
-            <p class="contact-details">1 Cottage Gardens</p>
-            <p class="contact-details">Northampton</p>
-            <p class="contact-details">NN3 9YW</p><br />
-            <p class="contact-details">Phone: 01604-406549</p>
-            <p class="contact-details">Email: enquiries@ahlandscapes.com</p>
-            <img src="images/fountain1.jpg" id="fountain-image"/>
-            <img src="images/fountain2.jpg" id="fountain-image2" />
-          </div><br />
+            <div id="contact-container">
+              <img src="images/fountain1.jpg" id="fountain-image" alt="Fountain Image" />
+                <div id="contact-details">
+                  <p>1 Cottage Gardens</p>
+                  <p>Billing Park</p>
+                  <p>Northampton</p>
+                  <p>NN3 9YW</p>
+                  <p>Phone: 01604-409834</p>
+                  <p>Email: enquiries@ahlandscapes.com</p>
+                </div>
+              <img src="images/fountain2.jpg" id="fountain-image2" alt="Fountain Image" />
+            </div>
 
           <hr />
 
@@ -55,8 +57,8 @@
 
               <div class="input-questions">
                 <p class="sub-headings">Questions:</p>
-                <textarea rows="12" cols="70">
-                  Random questions entered in here
+                <textarea rows="12" cols="53">
+
                 </textarea>
                   <div>
                     <button>Send</button>
