--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <img src="images/white-leaf-image.png" width="120" height="75" id="leaf-logo" />
+      <img src="images/leaf-image.png" width="120" height="75" id="leaf-logo" />
       <span>A&H Landscapes</span>
       <ul>
         <li><a href="index.html">Home</a></li>
