--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </main>
   <footer>
-    <img src="images/certificate-logo.png" id="certificate-logo" />
+    <img src="images/bali-logo.png" id="Bali-logo" />
     <div id="contact">
       <p id="phone-no">01604 - 406549</p>
       <p id="email-enquiry">enquiries@landscapes.co.uk</p>
@@ -41,6 +41,6 @@
     <p id="footer-txt">Design by DX2> &copy 2017</p>
   </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/index.js"></script>  
+<script src="js/index.js"></script>
 </body>
 </html>
