--- a/about.html
+++ b/about.html
@@ -78,14 +78,13 @@
 </body>
 </html>
 
-
-<!-- <div class="contact-info">
-  <p class="sub-headings">Contact Us</p><br />
-  <p class="contact-details">1 Cottage Gardens</p>
-  <p class="contact-details">Northampton</p>
-  <p class="contact-details">NN3 9YW</p><br />
-  <p class="contact-details">Phone: 01604-406549</p>
-  <p class="contact-details">Email: enquiries@ahlandscapes.com</p>
-  <img src="images/fountain1.jpg" id="fountain-image"/>
-  <img src="images/fountain2.jpg" id="fountain-image2" />
-</div><br /> -->
+<!-- <nav>
+  <img src="images/leaf-image.png" id="leaf-image" width="100" height="70"  />
+  <span><a href="index.html">A&H Landscapes</a></span>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav> -->
