--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 </head>
 <body>
   <header>
-    <nav>
-      <img src="images/leaf-image.png" id="leaf-image" width="100" height="70"  />
-      <span><a href="index.html">A&H Landscapes</a></span>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="topnav" id="myTopnav">
+      <div id="home-logo">
+        <a href="#"><img src="images/leaf-image.png" id="leaf-image" width="100" height="70" /></a>
+      </div>
+      <a href="#">Home</a>
+      <a href="about.html">About</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+
   </header>
   <main>
     <div class="shader"></div>
