--- a/gallery.html
+++ b/gallery.html
@@ -8,19 +8,21 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" href="css/slider.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
   <header>
-    <nav>
-      <img src="images/leaf-image.png" width="120" height="75" id="leaf-logo" />
-      <span>A&H Landscapes</span>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="topnav" id="myTopnav">
+      <div id="home-logo">
+        <a href="#"><img src="images/leaf-image.png" id="leaf-image" width="100" height="70" /></a>
+      </div>
+      <a href="index.html">Home</a>
+      <a href="#">About</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
   </header>
   <main>
     <div id="gallery-banner">
