refactor for responsive navbar - contact page

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <header>
     <div class="topnav" id="myTopnav">
       <div id="home-logo">
-        <a href="#"><img src="images/leaf-image.png" id="leaf-image" width="100" height="70" /></a>
+        <a href="index.html"><img src="images/leaf-image.png" id="leaf-image" width="100" height="70" /></a>
       </div>
       <a href="index.html">Home</a>
       <a href="#">About</a>
