--- a/contact.html
+++ b/contact.html
@@ -7,19 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/contact.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
   <header>
-    <nav>
-      <img src="images/leaf-image.png" width="120" height="75" id="leaf-logo" />
-      <span>A&H Landscapes</span>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="topnav" id="myTopnav">
+      <div id="home-logo">
+        <a href="index.html"><img src="images/leaf-image.png" id="leaf-image" width="100" height="70" /></a>
+      </div>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="#">Contact</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
   </header>
   <main>
     <div id="contact-banner">
@@ -79,5 +81,6 @@
 
     <img src="images/grass-banner.jpg" alt="Grass Banner"/>
   </footer>
+<script src="js/index.js"></script>
 </body>
 </html>
