--- a/gallery.html
+++ b/gallery.html
@@ -15,11 +15,11 @@
   <header>
     <div class="topnav" id="myTopnav">
       <div id="home-logo">
-        <a href="#"><img src="images/leaf-image.png" id="leaf-image" width="100" height="70" /></a>
+        <a href="index.html"><img src="images/leaf-image.png" id="leaf-image" width="100" height="70" /></a>
       </div>
       <a href="index.html">Home</a>
-      <a href="#">About</a>
-      <a href="gallery.html">Gallery</a>
+      <a href="about.html">About</a>
+      <a href="#">Gallery</a>
       <a href="contact.html">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
