beginning expansion of homepage / restructure bottom banner

--- a/index.html
+++ b/index.html
@@ -32,14 +32,22 @@
       <h2 class="intro-txt">Professional Design & Build Company</h2>
     </div>
   </main>
-  <footer>
-    <img src="images/bali-logo.png" id="Bali-logo" />
-    <div id="contact">
-      <p id="phone-no">01604 - 406549</p>
-      <p id="email-enquiry">enquiries@landscapes.co.uk</p>
-    </div>
-    <p id="footer-txt">Design by DX2> &copy 2017</p>
-  </footer>
+  <div class="bottomPage-banner">
+    
+  </div>
+
+  <!-- Expansion of page -->
+
+  <img src="http://via.placeholder.com/350x150" />
+
+  <h2>Types of Services</h2>
+
+
+
+
+
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/index.js"></script>
 </body>
