--- a/index.html
+++ b/index.html
@@ -32,21 +32,31 @@
       <h2 class="intro-txt">Professional Design & Build Company</h2>
     </div>
   </main>
-  <div class="bottomPage-banner">
-    
-  </div>
+    <div class="bottomPage-banner">
+    </div>
 
   <!-- Expansion of page -->
 
-  <img src="http://via.placeholder.com/350x150" />
+  <section>
+    <div class="column1">    
+      <img src="http://via.placeholder.com/350x150" id="abstract-image" />
 
-  <h2>Types of Services</h2>
+      <h2>Types of Landscapes</h2>
+        <ol>
+          <li>Paving</li>
+          <li>Lawn Mowing</li>
+          <li>Building Ponds</li>
+          <li>Decking</li>
+          <li>Building Sheds</li>
+        </ol>
+    </div>
 
 
 
 
 
 
+  </section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/index.js"></script>
