footer added in home page expansion

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
     </div>
   </main>
     <div class="bottomPage-banner">
+      <!--content to add -->
     </div>
 
   <!-- Expansion of page -->
 
   <section>
-    <div class="column1">    
+    <div class="column1">
       <img src="http://via.placeholder.com/350x150" id="abstract-image" />
 
       <h2>Types of Landscapes</h2>
@@ -49,14 +50,25 @@
           <li>Decking</li>
           <li>Building Sheds</li>
         </ol>
+    <blockquote>
+      An impressive quote made by a customer of A&H Landscapes
+    </blockquote>
     </div>
 
-
-
-
-
-
   </section>
+
+
+  <footer>
+    <div class="footer-info">
+      <img src="images/leaf-image.png" />
+      <p id="footer-company">A&H Landscapes</p><br />
+      <p class="contact-details">01604-406549</p>
+      <p class="contact-details" id="email-info">enquiries@ahlandscapes.com</p><br />
+      <p id="design-info">Design by DX2> &copy 2017</p>
+    </div>
+
+    <img src="images/grass-banner.jpg" alt="Grass Banner"/>
+  </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/index.js"></script>
