html added for home page expansion

--- a/index.html
+++ b/index.html
@@ -55,8 +55,23 @@
     </blockquote>
     </div>
 
-  </section>
+    <div class="column2">
+      <h2>Our Services</h2>
+      <ol>
+        <li>Paving</li>
+        <li>Lawn Mowing</li>
+        <li>Building Ponds</li>
+        <li>Decking</li>
+        <li>Building Sheds</li>
+      </ol>
+      <button>Contact Us</button>
 
+      <img src="http://via.placeholder.com/350x150" id="abstract-image" />
+
+      <img src="http://via.placeholder.com/250x150" id="abstract-image" />
+      <button>Contact Us</button>
+    </div>
+  </section>
 
   <footer>
     <div class="footer-info">
