arranging element positioning on expansion

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
   <section>
     <div class="column1">
-      <img src="http://via.placeholder.com/350x150" id="abstract-image" />
+      <img src="http://via.placeholder.com/550x300" id="abstract-image" />
 
-      <h2>Types of Landscapes</h2>
+      <h2 class="sub-heading">Types of Landscapes</h2>
         <ol>
           <li>Paving</li>
           <li>Lawn Mowing</li>
@@ -56,19 +56,21 @@
     </div>
 
     <div class="column2">
-      <h2>Our Services</h2>
-      <ol>
-        <li>Paving</li>
-        <li>Lawn Mowing</li>
-        <li>Building Ponds</li>
-        <li>Decking</li>
-        <li>Building Sheds</li>
-      </ol>
-      <button>Contact Us</button>
+      <div class="expandTop">
+        <h2 class="sub-heading">Our Services</h2>
+        <ol>
+          <li>Paving</li>
+          <li>Lawn Mowing</li>
+          <li>Building Ponds</li>
+          <li>Decking</li>
+          <li>Building Sheds</li>
+        </ol>
+        <button>Contact Us</button>
+      </div>  
 
-      <img src="http://via.placeholder.com/350x150" id="abstract-image" />
+      <img src="http://via.placeholder.com/550x200" id="abstract-image" />
 
-      <img src="http://via.placeholder.com/250x150" id="abstract-image" />
+      <img src="http://via.placeholder.com/400x200" id="abstract-image" />
       <button>Contact Us</button>
     </div>
   </section>
