more expansion layout changes

--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
   <section>
     <div class="column1">
       <img src="http://via.placeholder.com/550x300" id="abstract-image" />
-
-      <h2 class="sub-heading">Types of Landscapes</h2>
-        <ol>
-          <li>Paving</li>
-          <li>Lawn Mowing</li>
-          <li>Building Ponds</li>
-          <li>Decking</li>
-          <li>Building Sheds</li>
-        </ol>
+        <div class="expandBelow">
+          <h2 class="sub-heading">Types of Landscapes</h2>
+            <ol>
+              <li>Paving</li>
+              <li>Lawn Mowing</li>
+              <li>Building Ponds</li>
+              <li>Decking</li>
+              <li>Building Sheds</li>
+            </ol>
+        </div>    
     <blockquote>
       An impressive quote made by a customer of A&H Landscapes
     </blockquote>
@@ -66,7 +67,7 @@
           <li>Building Sheds</li>
         </ol>
         <button>Contact Us</button>
-      </div>  
+      </div>
 
       <img src="http://via.placeholder.com/550x200" id="abstract-image" />
 
