latest layout changes on expansion

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
     <div class="column1">
       <img src="http://via.placeholder.com/550x300" id="abstract-image" />
         <div class="expandBelow">
-          <h2 class="sub-heading">Types of Landscapes</h2>
-            <ol>
+          <h2 class="sub-heading" id="landscapes">Types of Landscapes</h2>
+            <ol class="todoList">
               <li>Paving</li>
               <li>Lawn Mowing</li>
               <li>Building Ponds</li>
               <li>Decking</li>
               <li>Building Sheds</li>
             </ol>
-        </div>    
+        </div>
     <blockquote>
       An impressive quote made by a customer of A&H Landscapes
     </blockquote>
@@ -58,8 +58,8 @@
 
     <div class="column2">
       <div class="expandTop">
-        <h2 class="sub-heading">Our Services</h2>
-        <ol>
+        <h2 class="sub-heading" id="services">Our Services</h2>
+        <ol class="todoList">
           <li>Paving</li>
           <li>Lawn Mowing</li>
           <li>Building Ponds</li>
