expansion images added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section>
     <div class="column1">
-      <img src="http://via.placeholder.com/550x300" id="abstract-image" />
+      <img src="./images/flower-closeup.jpg" alt="Flower closeup"/>
         <div class="expandBelow">
           <h2 class="sub-heading" id="landscapes">Types of Landscapes</h2>
             <ol class="todoList">
@@ -69,9 +69,9 @@
         <button>Contact Us</button>
       </div>
 
-      <img src="http://via.placeholder.com/550x200" id="abstract-image" />
+      <img src="./images/rockerie.png" alt="Rockerie" />
 
-      <img src="http://via.placeholder.com/400x200" id="abstract-image" />
+      <img src="./images/water-feature.jpg" />
       <button>Contact Us</button>
     </div>
   </section>
@@ -85,7 +85,7 @@
       <p id="design-info">Design by DX2 &copy 2017</p>
     </div>
 
-    <img src="images/grass-banner.jpg" alt="Grass Banner"/>
+    <img src="images/grass-banner.jpg" id="grassBanner" alt="Grass Banner"/>
   </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
