tidying positioning on expansion

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
   <section>
     <div class="column1">
-      <img src="./images/flower-closeup.jpg" alt="Flower closeup"/>
+      <img src="./images/flower-closeup.jpg" id="flower" alt="Flower closeup"/>
         <div class="expandBelow">
           <h2 class="sub-heading" id="landscapes">Types of Landscapes</h2>
-            <ol class="todoList">
+            <ol id="list1">
               <li>Paving</li>
               <li>Lawn Mowing</li>
               <li>Building Ponds</li>
@@ -52,14 +52,14 @@
             </ol>
         </div>
     <blockquote>
-      An impressive quote made by a customer of A&H Landscapes
+      "An impressive quote made by a customer of A&H Landscapes"
     </blockquote>
     </div>
 
     <div class="column2">
       <div class="expandTop">
         <h2 class="sub-heading" id="services">Our Services</h2>
-        <ol class="todoList">
+        <ol id="list2">
           <li>Paving</li>
           <li>Lawn Mowing</li>
           <li>Building Ponds</li>
